--- a/app/templates/layout.html
+++ b/app/templates/layout.html
@@ -4,6 +4,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>{{ title }}</title>
     <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='main.css') }}">
+    {% block head %}
+
+    {% endblock %}
 </head>
 <body>
     <header>
