--- a/app/templates/submit.html
+++ b/app/templates/submit.html
@@ -6,7 +6,7 @@
 
 {% block content %}
 <h2>Submit food image</h2>
-<form method="POST">
+<form method="POST" enctype="multipart/form-data">
     {{ form.hidden_tag() }}
     {{ form.photo.label(id='img-input-box') }}
     {{ form.photo() }}
