--- a/app/static/image-form.css
+++ b/app/static/image-form.css
@@ -1,3 +1,5 @@
+
+
 input[type="file"] {
     display: none;
 }
@@ -19,4 +21,83 @@ label#img-input-box {
 img.img-display {
     max-width: 30vw;
     max-height: 30vh;
+}
+
+#caption {
+    text-align: center;
+    font-weight:bold;
+    font-size: 2em;
+    color:rgb(255, 255, 255);
+}
+
+#caption h2 {
+    margin: 30px 0px 10px 0px;
+}
+
+#submit-form {
+    margin-left:auto;
+    margin-right:auto;
+    width: 60%;
+}
+
+#photo {
+    width: 10px;
+}
+
+#img-input-box {
+    color:black;
+    font-size: 2em;
+}
+
+/* #upload-buttons{
+    margin-left:auto;
+    margin-right:auto;
+    align-items: center;
+    display:block;
+    height: 10%;
+    width:100%;
+} */
+
+#clear-cont,#submit-cont {
+    height:20%;
+    text-align: center;
+}
+
+#clear, #submit {
+    height:100%;
+    width:15%;
+    font-size: large;
+    border-radius: 20px;
+    margin-left:auto;
+    margin-right:auto;
+    padding:0px;
+    border: 0px;
+}
+
+#submit-cont {
+    margin:20px 0px 15px 0px;
+}
+
+#submit {
+    background-color: rgb(52, 52, 255);
+    color:white;
+}
+
+#img-input-box,#submit,#clear{
+    cursor: pointer;
+}
+
+#submit:hover{
+    background-color: rgb(255, 255, 255);
+    color:black;
+}
+
+#clear:hover{
+    background-color: red;
+    color:white;
+}
+
+#img-input-box:hover{
+    background-color:rgb(100, 100, 100);
+    color:white;
 }
