--- a/app/static/main.css
+++ b/app/static/main.css
@@ -1,3 +1,9 @@
+body {
+    background: radial-gradient(circle at 50% 68.8%, rgb(50, 50, 50) 0%, rgb(0, 0, 0) 99.5%);
+    color: darkgreen;
+    font-family:Verdana, Geneva, Tahoma, sans-serif;
+}
+
 html, body {
     margin: 0;
 }
@@ -7,6 +13,7 @@ header {
     height: 50px;
     align-items: center;
     padding: 0 15px;
+    color:black;
 }
 
 header > * {
@@ -27,4 +34,8 @@ header a {
 
 header a:hover {
     background-color: #b0b0b0;
+}
+
+header {
+    background-color: darkgreen;
 }
