--- a/app/templates/layout.html
+++ b/app/templates/layout.html
@@ -11,9 +11,9 @@
 <body>
     <header>
         <a href="/">Home</a>
-        <a href="/login">Login</a>
-        <a href="/register">Register</a>
-        <a href="/logout">Logout</a>
+        <a href="login">Login</a>
+        <a href="register">Register</a>
+        <a href="logout">Logout</a>
         <!-- start: for account debugging only -->
         <span class="right-sep">
             Login status: 
