--- a/app/templates/submit.html
+++ b/app/templates/submit.html
@@ -1,36 +1,23 @@
-{% extends 'layout.html' %}
 
-{% block head %}
-<link rel="stylesheet" href="{{ url_for('static', filename='image-form.css') }}">
-{% endblock %}
 
-{% block content %}
-<h2>Submit food image</h2>
-<form method="POST" enctype="multipart/form-data">
-    {{ form.hidden_tag() }}
-    {{ form.photo.label(id='img-input-box') }}
-    {{ form.photo() }}
-    <button id="clear">Clear</button>
-    {{ form.submit() }}
-</form>
-<script>
-    const image_src = document.getElementById('photo')
-    const clear = document.getElementById('clear')
-    const input_box = document.getElementById('img-input-box')
-    image_src.oninput = () => {
-        const reader = new FileReader()
-        reader.onload = e => {
-            const img_display = document.createElement('img')
-            img_display.classList.add('img-display')
-            img_display.src = e.target.result
-            input_box.innerHTML = null
-            input_box.append(img_display)
-        }
-        reader.readAsDataURL(image_src.files[0])
-    }
-    clear.onclick = (e) => {
-        e.preventDefault()
-        input_box.innerHTML = 'Upload photo here'
-    }
-</script>
-{% endblock %}
+<!DOCTYPE html>
+<html>
+  
+<body>
+    <div class="jumbotron text-center">
+      <p style="font-size: 40px" face="verdana">
+        Upload the food images here and click on Recognize.
+      </p>
+    </div>
+    <form action="/predict"><input class="btn btn-primary" type="submit" class="sub" value="Recognize" /></form>
+    <div class="form-inline">
+      <h2>Upload food images.</h2>
+      <form method="POST" action="/upload" enctype="multipart/form-data">
+        <input class="form-control" type="file" name="img" multiple />
+        <input class="btn btn-primary" type="submit" />
+      </form>
+        </div>
+    </div>
+    </body>
+</html>
+
