--- a/app/templates/submit.html
+++ b/app/templates/submit.html
@@ -1,10 +1,8 @@
-
-
-<!DOCTYPE html>
-<html>
+{% extends 'layout.html' %}
+{% block content %}
   
 <body>
-    <div class="jumbotron text-center">
+    <div>
       <p style="font-size: 40px" face="verdana">
         Upload the food images here and click on Recognize.
       </p>
@@ -20,4 +18,4 @@
     </div>
     </body>
 </html>
-
+{% endblock %}
