--- a/app/templates/layout.html
+++ b/app/templates/layout.html
@@ -13,7 +13,11 @@
         <a href="/">Home</a>
         <a href="login">Login</a>
         <a href="register">Register</a>
-        <a href="logout">Logout</a>
+        <a href="submit">Submit image</a>
+        {% if current_user.is_authenticated %}
+            <a href="history">History</a> # TODO: jh doing this.
+            <a href="logout">Logout</a>
+        {% endif %}
         <!-- start: for account debugging only -->
         <span class="right-sep">
             Login status: 
