--- a/app/templates/layout.html
+++ b/app/templates/layout.html
@@ -11,20 +11,20 @@
 <body>
     <header>
         <a href="/">Home</a>
-        <a href="login">Login</a>
-        <a href="register">Register</a>
         <a href="submit">Submit image</a>
         {% if current_user.is_authenticated %}
             <a href="history">History</a> # TODO: jh doing this.
             <a href="logout">Logout</a>
+        {% else %}
+            <a href="login">Login</a>
+            <a href="register">Register</a>
         {% endif %}
         <!-- start: for account debugging only -->
         <span class="right-sep">
-            Login status: 
             {% if current_user.is_authenticated %}
-                {{ current_user.username }}
+                Logged in as {{ current_user.username }}
             {% else %}
-                Not logged in
+                Not logged in!
             {% endif %}
         </span>
         <!-- end: for account debugging only -->
