--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -1,5 +1,18 @@
 {% extends 'layout.html' %}
 
 {% block content %}
-
+<div id="hero">
+    <div class="herocontent">
+        <div class="herotext">
+            <!-- ok i know this looks fucking stupid but i want to left align the text while centering the div so i have to wrap it around https://stackoverflow.com/questions/46569692/displaying-flexbox-centered-but-align-items-left-like-text-align-left-->
+            <h1>FoodTracker </h1>
+            <br>
+            <h1 class="gradient">A healthier you</h1>
+        </div>
+    </div>
+    <div class="herocontent">
+        <img width=500
+            src="https://images.pexels.com/photos/1640772/pexels-photo-1640772.jpeg?cs=srgb&dl=pexels-ella-olsson-1640772.jpg&fm=jpg"></img>
+    </div>
+</div>
 {% endblock %}
