--- a/app/templates/layout.html
+++ b/app/templates/layout.html
@@ -9,17 +9,17 @@
     {% endblock %}
 </head>
 <body>
-    <header>
+    <nav id="inset">
         <a href="/">Home</a>
         <a href="submit">Submit image</a>
         {% if current_user.is_authenticated %}
-            <a href="history">History</a> # TODO: jh doing this.
+            <a href="history">History</a> <!-- TODO: jh doing this. -->
             <a href="logout">Logout</a>
         {% else %}
             <a href="login">Login</a>
             <a href="register">Register</a>
         {% endif %}
-        <!-- start: for account debugging only -->
+    
         <span class="right-sep">
             {% if current_user.is_authenticated %}
                 Logged in as {{ current_user.username }}
@@ -28,7 +28,7 @@
             {% endif %}
         </span>
         <!-- end: for account debugging only -->
-    </header>
+    </nav>
     {% with messages = get_flashed_messages() %}
     {% if messages %}
         {% for message in messages %}
@@ -36,8 +36,9 @@
         {% endfor %}
     {% endif %}
     {% endwith %}
-    {% block content %}
-
+    <div id="content">
+        {% block content %}
+    </div>
     {% endblock %}
 
 </body>
