--- a/app/templates/login.html
+++ b/app/templates/login.html
@@ -4,7 +4,7 @@
 <form method="POST">
     {{ form.hidden_tag() }}
     <div>
-        {{ form.email.label() }}
+        <span>Email:</span>{{ form.email.label() }}
         {{ form.email() }}
         {% if form.email.errors %}
             {% for error in form.email.errors %}
@@ -13,7 +13,7 @@
         {% endif %}
     </div>
     <div>
-        {{ form.password.label() }}
+        <span>Password:</span>{{ form.password.label() }}
         {{ form.password() }}
         {% if form.password.errors %}
             {% for error in form.password.errors %}
@@ -22,7 +22,7 @@
         {% endif %}
     </div>
     <div>
-        {{ form.remember() }}
+        <span>Remember login?</span>{{ form.remember() }}
         {{ form.remember.label() }}
     </div>
     {{ form.submit() }}
