--- a/app/templates/layout.html
+++ b/app/templates/layout.html
@@ -9,25 +9,28 @@
     {% endblock %}
 </head>
 <body>
-    <nav id="inset">
-        <a href="/">Home</a>
-        <a href="submit">Submit image</a>
-        {% if current_user.is_authenticated %}
-            <a href="history">History</a> <!-- TODO: jh doing this. -->
-            <a href="logout">Logout</a>
-        {% else %}
-            <a href="login">Login</a>
-            <a href="register">Register</a>
-        {% endif %}
-    
-        <span class="right-sep">
-            {% if current_user.is_authenticated %}
-                Logged in as {{ current_user.username }}
-            {% else %}
-                Not logged in!
-            {% endif %}
-        </span>
-        <!-- end: for account debugging only -->
+    <nav style="display: inline-flex; justify-content: space-between;" id="inset">
+            <div>
+                <a href="/">Home</a>
+                <a href="submit">Submit image</a>
+                {% if current_user.is_authenticated %}
+                    <a href="history">History</a> <!-- TODO: jh doing this. -->
+                    <a href="logout">Logout</a>
+                {% else %}
+                    <a href="login">Login</a>
+                    <a href="register">Register</a>
+                {% endif %}
+            </div>
+            <div>
+                <p style="margin-right: 30px;">
+                    {% if current_user.is_authenticated %}
+                        Logged in as {{ current_user.username }}
+                    {% else %}
+                        Not logged in!
+                    {% endif %}
+                </p>
+            </div>
+            <!-- end: for account debugging only -->
     </nav>
     {% with messages = get_flashed_messages() %}
     {% if messages %}
